tests/script_runtime_errors/arr_bad_idx2/error.txt
Error: 
    2 | event[idx]
      |       ^^^ Array index out of bounds, got index 42 but expected an index in the range 0:3
